[package]
    authors = ["Eric Evans (CireSnave@gmail.com)"]
    categories = [
        "command-line-interface",
        "config",
        "development-tools",
        "no-std",
    ]
    description = "Command Line Interfaces and Configuration Management made easy"
    documentation = "https://github.com/ciresnave/applause"
    edition = "2021"
    homepage = "https://github.com/ciresnave/applause"
    keywords = ["binary", "bit", "bitfield", "bits", "byte"]
    license = "MIT"
    name = "applause_derive"
    readme = "README.md"
    repository = "https://github.com/ciresnave/applause"
    rust-version = "1.60.0"
    version = "0.1.1"

[lib]
    proc-macro = true

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    log   = "0.4.20"
    quote = "1.0.33"
    syn   = "2.0.43"
